--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "firebase": "^9.17.1",
+    "json-to-ts": "^1.7.0",
+    "leaflet": "^1.9.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react-calendar": "^3.9.0"
   }
 }
